--- a/arch/arm/boot/dts/msm8974-b2-common.dtsi
+++ b/arch/arm/boot/dts/msm8974-b2-common.dtsi
@@ -632,6 +632,7 @@
 	qcom,rconn-mohm-sw-est-ocv = <10>;
 	qcom,enable-batt-full-fake-ocv = <1>;
 	qcom,qb-mode-cc-criteria-uah = <10000>;
+	qcom,soc-overrate-criteria-for-sw-ocv = <5>;
 	qcom,r-sense-uohm = <10500>;
 	status = "ok";
 };
@@ -649,10 +650,10 @@
 	qcom,cool-bat-decidegc = <0>;
 	qcom,cool-bat-mv = <4350>;
 	qcom,ibatmax-warm-ma = <1750>;
-	qcom,warm-bat-decidegc = <480>;
+	qcom,warm-bat-decidegc = <460>;
 	qcom,warm-bat-mv = <4100>;
 	qcom,ibatmax-cool-ma = <1750>;
-	qcom,vbatdet-delta-mv = <50>;
+	qcom,vbatdet-delta-mv = <100>;
 	qcom,resume-soc = <99>;
 	qcom,tchg-mins = <960>;
 	qcom,batt-hot-percentage = <25>;
