--- a/arch/arm/configs/b2wlj_defconfig
+++ b/arch/arm/configs/b2wlj_defconfig
@@ -42,7 +42,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-ElementalX-m8-7.01-Sense"
+CONFIG_LOCALVERSION="-EX-aj20010319-B2WLJ-3.0.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -111,8 +111,6 @@ CONFIG_RT_GROUP_SCHED=y
 # CONFIG_BLK_CGROUP is not set
 # CONFIG_CHECKPOINT_RESTORE is not set
 CONFIG_NAMESPACES=y
-CONFIG_CGROUP_MEM_RES_CTLR=y
-CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
 # CONFIG_UTS_NS is not set
 # CONFIG_IPC_NS is not set
 # CONFIG_USER_NS is not set
@@ -878,7 +876,6 @@ CONFIG_DEFAULT_TCP_CONG="cubic"
 # CONFIG_HTC_TCP_SYN_FAIL is not set
 # CONFIG_HTC_LARGE_TCP_MEM is not set
 # CONFIG_HTC_FIB_RULE_DEBUG is not set
-# CONFIG_HTC_NETWORK_CNE is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_PRIVACY=y
 CONFIG_IPV6_ROUTER_PREF=y
@@ -2296,7 +2293,6 @@ CONFIG_MEDIA_CONTROLLER=y
 CONFIG_VIDEO_DEV=y
 CONFIG_VIDEO_V4L2_COMMON=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
-# CONFIG_DVB_CORE is not set
 CONFIG_VIDEO_MEDIA=y
 
 #
@@ -3165,7 +3161,6 @@ CONFIG_FLASHLIGHT_TPS61310=y
 # CONFIG_FLASHLIGHT_LM3643 is not set
 CONFIG_FLASHLIGHT_1500mA=y
 # CONFIG_FRONT_FLASHLIGHT_COMMON is not set
-# CONFIG_LEDS_LP5521_HTC is not set
 
 #
 # iptables trigger is under Netfilter config (LED target)
