--- a/arch/arm/configs/mecul_defconfig
+++ b/arch/arm/configs/mecul_defconfig
@@ -42,16 +42,18 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-B2-ElementalX-Port-aj20010319"
+CONFIG_LOCALVERSION="-EX-aj20010319-e8-3.0.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
 CONFIG_HAVE_KERNEL_LZO=y
-CONFIG_KERNEL_GZIP=y
+CONFIG_HAVE_KERNEL_LZ4=y
+# CONFIG_KERNEL_GZIP is not set
 # CONFIG_KERNEL_LZMA is not set
 # CONFIG_KERNEL_XZ is not set
 # CONFIG_KERNEL_LZO is not set
+CONFIG_KERNEL_LZ4=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -88,7 +90,7 @@ CONFIG_RCU_FAST_NO_HZ=y
 # CONFIG_TREE_RCU_TRACE is not set
 # CONFIG_RCU_BOOST is not set
 CONFIG_IKCONFIG=y
-CONFIG_IKCONFIG_PROC=y
+# CONFIG_IKCONFIG_PROC is not set
 CONFIG_LOG_BUF_SHIFT=17
 CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
@@ -125,7 +127,8 @@ CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
-CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+# CONFIG_RD_LZ4 is not set
+# CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_PANIC_TIMEOUT=5
@@ -164,9 +167,8 @@ CONFIG_COMPAT_BRK=y
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
 # CONFIG_SLOB is not set
-CONFIG_PROFILING=y
+# CONFIG_PROFILING is not set
 CONFIG_TRACEPOINTS=y
-# CONFIG_OPROFILE is not set
 CONFIG_HAVE_OPROFILE=y
 CONFIG_KPROBES=y
 # CONFIG_JUMP_LABEL is not set
@@ -232,18 +234,17 @@ CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
+CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_SIO=y
-CONFIG_IOSCHED_BFQ=y
-CONFIG_CGROUP_BFQIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_ROW=y
 # CONFIG_DEFAULT_CFQ is not set
-# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_ZEN is not set
 CONFIG_DEFAULT_IOSCHED="row"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
@@ -384,7 +385,6 @@ CONFIG_MSM_AMSS_VERSION=6225
 # CONFIG_MSM_AMSS_VERSION_6210 is not set
 # CONFIG_MSM_AMSS_VERSION_6220 is not set
 CONFIG_MSM_AMSS_VERSION_6225=y
-CONFIG_HTC_BUILD_EDIAG=y
 # CONFIG_HTC_FD_MONITOR is not set
 CONFIG_MSM7X00A_USE_GP_TIMER=y
 # CONFIG_MSM7X00A_USE_DG_TIMER is not set
@@ -559,30 +559,10 @@ CONFIG_MSM_XPU_ERR_FATAL=y
 CONFIG_KRAIT_REGULATOR=y
 # CONFIG_KERNEL_TEXT_MPU_PROT is not set
 CONFIG_HTC_POWER_DEBUG=y
-# CONFIG_MACH_BAGOSS is not set
-# CONFIG_MACH_GLU_U is not set
-# CONFIG_MACH_GLU_WLJ is not set
-# CONFIG_MACH_M8 is not set
-CONFIG_PROJECT_NAME=""
-# CONFIG_MACH_M8_DUG is not set
-# CONFIG_MACH_M8_TL is not set
-# CONFIG_MACH_M8_WHL is not set
-# CONFIG_MACH_M8_WL is not set
-# CONFIG_MACH_MEC_UL is not set
-# CONFIG_MACH_MEC_DUG is not set
-# CONFIG_MACH_MEC_DWG is not set
-# CONFIG_MACH_MEC_TL is not set
-# CONFIG_MACH_MEC_WHL is not set
-# CONFIG_MACH_B2_WLJ is not set
-# CONFIG_MACH_B2_UL is not set
 CONFIG_MACH_MEC_UL=y
-# CONFIG_MACH_EYE_UL is not set
-# CONFIG_MACH_EYE_WL is not set
-# CONFIG_MACH_EYE_WHL is not set
-# CONFIG_MACH_MELS_TUHL is not set
+CONFIG_PROJECT_NAME=""
 CONFIG_PERFLOCK=y
 # CONFIG_HTC_MONITOR_SUBSYS_SLEEP_TIME is not set
-CONFIG_MSM_SLEEPER=y
 
 #
 # System MMU
@@ -659,7 +639,7 @@ CONFIG_SMP=y
 # CONFIG_SMP_ON_UP is not set
 CONFIG_ARM_CPU_TOPOLOGY=y
 CONFIG_SCHED_MC=y
-# CONFIG_SCHED_SMT is not set
+CONFIG_SCHED_SMT=y
 CONFIG_HAVE_ARM_SCU=y
 CONFIG_ARM_ARCH_TIMER=y
 CONFIG_VMSPLIT_3G=y
@@ -674,7 +654,12 @@ CONFIG_ARCH_NR_GPIO=0
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
-CONFIG_HZ=100
+# CONFIG_HZ_100 is not set
+# CONFIG_HZ_250 is not set
+CONFIG_HZ_300=y
+# CONFIG_HZ_1000 is not set
+CONFIG_HZ=300
+CONFIG_SCHED_HRTICK=y
 # CONFIG_THUMB2_KERNEL is not set
 CONFIG_AEABI=y
 # CONFIG_OABI_COMPAT is not set
@@ -697,7 +682,9 @@ CONFIG_MIGRATION=y
 CONFIG_ZONE_DMA_FLAG=0
 CONFIG_BOUNCE=y
 CONFIG_VIRT_TO_BUS=y
-# CONFIG_KSM is not set
+CONFIG_KSM=y
+# CONFIG_KSM_HTC_POLICY is not set
+CONFIG_KSM_CHECK_PAGE=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_CLEANCACHE is not set
 CONFIG_MEMORY_HOLE_CARVEOUT=y
@@ -716,8 +703,6 @@ CONFIG_ALIGNMENT_TRAP=y
 CONFIG_CC_STACKPROTECTOR=y
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
 # CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART is not set
-CONFIG_VMWARE_MVP=y
-# CONFIG_VMWARE_MVP_DEBUG is not set
 # CONFIG_CP_ACCESS is not set
 
 #
@@ -732,7 +717,7 @@ CONFIG_ZBOOT_ROM_BSS=0
 CONFIG_CMDLINE=""
 # CONFIG_XIP_KERNEL is not set
 CONFIG_KEXEC=y
-CONFIG_ATAGS_PROC=y
+# CONFIG_ATAGS_PROC is not set
 CONFIG_KEXEC_HARDBOOT=y
 # CONFIG_CRASH_DUMP is not set
 # CONFIG_AUTO_ZRELADDR is not set
@@ -761,9 +746,6 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE is not set
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_LIONHEART=y
-CONFIG_CPU_FREQ_GOV_INTELLIMM=y
-CONFIG_CPU_FREQ_GOV_SMARTASSH3=y
 
 #
 # ARM CPU frequency scaling drivers
@@ -891,7 +873,6 @@ CONFIG_DEFAULT_TCP_CONG="cubic"
 # CONFIG_HTC_TCP_SYN_FAIL is not set
 # CONFIG_HTC_LARGE_TCP_MEM is not set
 # CONFIG_HTC_FIB_RULE_DEBUG is not set
-CONFIG_HTC_MONITOR=y
 # CONFIG_HTC_NETWORK_CNE is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_PRIVACY=y
@@ -1341,8 +1322,7 @@ CONFIG_OF=y
 #
 # Device Tree and Open Firmware support
 #
-# CONFIG_PROC_DEVICETREE is not set
-CONFIG_POWERSUSPEND=y
+CONFIG_PROC_DEVICETREE=y
 # CONFIG_OF_SELFTEST is not set
 CONFIG_OF_FLATTREE=y
 CONFIG_OF_EARLY_FLATTREE=y
@@ -1413,7 +1393,6 @@ CONFIG_CABLE_DETECT_8XXX=y
 CONFIG_CABLE_DETECT_ACCESSORY=y
 CONFIG_VIB_TRIGGERS=y
 # CONFIG_QPNP_VIBRATOR_PWM is not set
-CONFIG_UID_CPUTIME=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1641,7 +1620,7 @@ CONFIG_WCNSS_REGISTER_DUMP_ON_BITE=y
 # Input device support
 #
 CONFIG_INPUT=y
-# CONFIG_INPUT_FF_MEMLESS is not set
+CONFIG_INPUT_FF_MEMLESS=y
 CONFIG_INPUT_POLLDEV=y
 # CONFIG_INPUT_SPARSEKMAP is not set
 
@@ -1652,7 +1631,7 @@ CONFIG_INPUT_MOUSEDEV=y
 CONFIG_INPUT_MOUSEDEV_PSAUX=y
 CONFIG_INPUT_MOUSEDEV_SCREEN_X=1024
 CONFIG_INPUT_MOUSEDEV_SCREEN_Y=768
-# CONFIG_INPUT_JOYDEV is not set
+CONFIG_INPUT_JOYDEV=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_EVBUG=m
 CONFIG_INPUT_KEYRESET=y
@@ -1767,7 +1746,7 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_WAKE_GESTURES=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI4_DEV is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE=y
-CONFIG_SECURE_TOUCH=y
+# CONFIG_SECURE_TOUCH is not set
 # CONFIG_TOUCHSCREEN_GT9XX is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
@@ -1802,7 +1781,6 @@ CONFIG_AK8789_HALLSENSOR=y
 CONFIG_POWER_KEY_LED=y
 CONFIG_POWER_KEY_CLR_RESET=y
 CONFIG_POWER_VOLUP_RESET=y
-CONFIG_KPDPWR_S2_DVDD_RESET=y
 # CONFIG_PWRKEY_WAKESRC_LOG is not set
 # CONFIG_SENSORS_CAPELLA_CM36283 is not set
 
@@ -1882,7 +1860,6 @@ CONFIG_DIAG_OVER_USB=y
 #
 # DIAG RB Dump support for DIAG
 #
-CONFIG_DIAG_RB_DUMP=y
 # CONFIG_TTY_PRINTK is not set
 # CONFIG_HVC_DCC is not set
 # CONFIG_IPMI_HANDLER is not set
@@ -1909,25 +1886,22 @@ CONFIG_I2C_CHARDEV=y
 # CONFIG_SENSORS_AKM8975_PANA_GYRO is not set
 # CONFIG_SENSORS_AK8963 is not set
 # CONFIG_SENSORS_PANASONIC_GYRO is not set
-# CONFIG_SENSORS_AK8963_DOE_PLUS is not set
 # CONFIG_SENSORS_R3GD20 is not set
 # CONFIG_SENSORS_LSM330_ACC is not set
 # CONFIG_SENSORS_LSM330_GYRO is not set
 # CONFIG_TPS65200 is not set
-# CONFIG_BOSCH_BMA250 is not set
 # CONFIG_SENSORS_BMA250 is not set
 # CONFIG_INPUT_YAS_MAGNETOMETER is not set
+# CONFIG_SENSORS_NFC_PN548 is not set
 CONFIG_SENSORS_NFC_PN544=y
 # CONFIG_SENSORS_NFC_IRQ_WORKAROUND is not set
 # CONFIG_INPUT_CAPELLA_CM3628 is not set
-#PL-sensor
-#
 CONFIG_INPUT_CAPELLA_CM3629=y
-# CONFIG_INPUT_CAPELLA_CM36686 is not set
-# CONFIG_INPUT_EMINENT_EPL88051KPW is not set
 CONFIG_INPUT_CAPELLA_CM32181=n
 CONFIG_WSENSOR_ENABLE=n
 CONFIG_PSENSOR_KTHRESHOLD=y
+# CONFIG_INPUT_CAPELLA_CM36686 is not set
+# CONFIG_INPUT_EMINENT_EPL88051KPW is not set
 # CONFIG_VP_A1026 is not set
 # CONFIG_VP_A1028 is not set
 # CONFIG_AMP_TPA2051D3 is not set
@@ -1939,7 +1913,6 @@ CONFIG_AMP_TFA9887=y
 CONFIG_AMP_TFA9887L=y
 # CONFIG_INPUT_ISL29028 is not set
 # CONFIG_INPUT_ISL29029 is not set
-# CONFIG_CIR_ALWAYS_READY is not set
 # CONFIG_LIGHTSENSOR_EPL88051 is not set
 
 #
@@ -1947,8 +1920,6 @@ CONFIG_AMP_TFA9887L=y
 #
 # CONFIG_SENSORS_ONLY_BMA255 is not set
 CONFIG_I2C_HELPER_AUTO=y
-CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
-#CONFIG_FLASHLIGHT_1500mA is not set
 
 #
 # I2C Hardware Bus support
@@ -2307,7 +2278,7 @@ CONFIG_REGULATOR_FIXED_VOLTAGE=y
 # CONFIG_REGULATOR_MSM_GPIO is not set
 CONFIG_REGULATOR_STUB=y
 CONFIG_REGULATOR_QPNP=y
-# CONFIG_REGULATOR_NCP6924_OFFMODE_CHARGE is not set
+# CONFIG_REGULATOR_TWL80125 is not set
 CONFIG_MEDIA_SUPPORT=y
 
 #
@@ -2317,9 +2288,8 @@ CONFIG_MEDIA_CONTROLLER=y
 CONFIG_VIDEO_DEV=y
 CONFIG_VIDEO_V4L2_COMMON=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
-CONFIG_DVB_CORE=m
-CONFIG_DVB_NET=y
-CONFIG_VIDEO_MEDIA=m
+# CONFIG_DVB_CORE is not set
+CONFIG_VIDEO_MEDIA=y
 
 #
 # Multimedia drivers
@@ -2383,9 +2353,8 @@ CONFIG_MSM_ISPIF=y
 # CONFIG_s5k4e1 is not set
 # CONFIG_OV12830 is not set
 # CONFIG_AR0260 is not set
-# CONFIG_OV13850 is not set
 # CONFIG_OV13850_800M is not set
-CONFIG_OV13850_1140M=y
+# CONFIG_OV13850_1140M is not set
 # CONFIG_S5K5E_ONELANE is not set
 # CONFIG_S5K5E_TWOLANE is not set
 CONFIG_s5k5e=y
@@ -2394,52 +2363,32 @@ CONFIG_MSMB_JPEG=y
 CONFIG_RAWCHIPII=y
 CONFIG_TI201_ACT=y
 CONFIG_ACT_OIS_BINDER=y
-# CONFIG_AR1820 is not set
+# CONFIG_RUMBAS_ACT is not set
 # CONFIG_IMX214_800M_FOV77 is not set
 # CONFIG_IMX214_800M_FOV87 is not set
 CONFIG_MSM_VIDC_V4L2=y
+CONFIG_MSM_WFD=y
 CONFIG_OV13850=y
 #CONFIG_VD6869 is not set
 #CONFIG_OV4688 is not set
 #CONFIG_OV2722 is not set
-CONFIG_MSM_WFD=y
 # CONFIG_MSM_WFD_DEBUG is not set
-CONFIG_DVB_MPQ=m
-CONFIG_DVB_MPQ_DEMUX=m
-CONFIG_DVB_MPQ_NUM_DMX_DEVICES=4
-CONFIG_DVB_MPQ_TSPP1=y
-# CONFIG_DVB_MPQ_TSPP2 is not set
-# CONFIG_DVB_MPQ_VIDEO is not set
 # CONFIG_MSM_VCAP is not set
 # CONFIG_MEDIA_ATTACH is not set
-CONFIG_MEDIA_TUNER=m
-CONFIG_MEDIA_TUNER_CUSTOMISE=y
-
-#
-# Customize TV tuners
-#
-CONFIG_MEDIA_TUNER_SIMPLE=m
-CONFIG_MEDIA_TUNER_TDA8290=m
-CONFIG_MEDIA_TUNER_TDA827X=m
-CONFIG_MEDIA_TUNER_TDA18271=m
-CONFIG_MEDIA_TUNER_TDA9887=m
-CONFIG_MEDIA_TUNER_TEA5761=m
-CONFIG_MEDIA_TUNER_TEA5767=m
-CONFIG_MEDIA_TUNER_MT20XX=m
-CONFIG_MEDIA_TUNER_MT2060=m
-CONFIG_MEDIA_TUNER_MT2063=m
-CONFIG_MEDIA_TUNER_MT2266=m
-CONFIG_MEDIA_TUNER_MT2131=m
-CONFIG_MEDIA_TUNER_QT1010=m
-CONFIG_MEDIA_TUNER_XC2028=m
-CONFIG_MEDIA_TUNER_XC5000=m
-CONFIG_MEDIA_TUNER_XC4000=m
-CONFIG_MEDIA_TUNER_MXL5005S=m
-CONFIG_MEDIA_TUNER_MXL5007T=m
-CONFIG_MEDIA_TUNER_MC44S803=m
-CONFIG_MEDIA_TUNER_MAX2165=m
-CONFIG_MEDIA_TUNER_TDA18218=m
-CONFIG_MEDIA_TUNER_TDA18212=m
+CONFIG_MEDIA_TUNER=y
+# CONFIG_MEDIA_TUNER_CUSTOMISE is not set
+CONFIG_MEDIA_TUNER_SIMPLE=y
+CONFIG_MEDIA_TUNER_TDA8290=y
+CONFIG_MEDIA_TUNER_TDA827X=y
+CONFIG_MEDIA_TUNER_TDA18271=y
+CONFIG_MEDIA_TUNER_TDA9887=y
+CONFIG_MEDIA_TUNER_TEA5761=y
+CONFIG_MEDIA_TUNER_TEA5767=y
+CONFIG_MEDIA_TUNER_MT20XX=y
+CONFIG_MEDIA_TUNER_XC2028=y
+CONFIG_MEDIA_TUNER_XC5000=y
+CONFIG_MEDIA_TUNER_XC4000=y
+CONFIG_MEDIA_TUNER_MC44S803=y
 CONFIG_VIDEO_V4L2=y
 CONFIG_VIDEOBUF2_CORE=y
 CONFIG_VIDEOBUF2_MEMOPS=y
@@ -2602,7 +2551,6 @@ CONFIG_USB_GSPCA=m
 # CONFIG_VIDEO_PVRUSB2 is not set
 # CONFIG_VIDEO_HDPVR is not set
 # CONFIG_VIDEO_EM28XX is not set
-# CONFIG_VIDEO_TLG2300 is not set
 # CONFIG_VIDEO_CX231XX is not set
 # CONFIG_VIDEO_TM6000 is not set
 # CONFIG_VIDEO_USBVISION is not set
@@ -2640,156 +2588,6 @@ CONFIG_RADIO_ADAPTERS=y
 # CONFIG_RADIO_WL128X is not set
 CONFIG_RADIO_IRIS=y
 CONFIG_RADIO_IRIS_TRANSPORT=m
-CONFIG_DVB_MAX_ADAPTERS=8
-# CONFIG_DVB_DYNAMIC_MINORS is not set
-CONFIG_DVB_CAPTURE_DRIVERS=y
-# CONFIG_TTPCI_EEPROM is not set
-
-#
-# Supported USB Adapters
-#
-# CONFIG_DVB_USB is not set
-# CONFIG_SMS_SIANO_MDTV is not set
-
-#
-# Supported FlexCopII (B2C2) Adapters
-#
-# CONFIG_DVB_B2C2_FLEXCOP is not set
-
-#
-# Supported DVB Frontends
-#
-CONFIG_DVB_FE_CUSTOMISE=y
-
-#
-# Customise DVB Frontends
-#
-
-#
-# Multistandard (satellite) frontends
-#
-CONFIG_DVB_STB0899=m
-CONFIG_DVB_STB6100=m
-CONFIG_DVB_STV090x=m
-CONFIG_DVB_STV6110x=m
-
-#
-# Multistandard (cable + terrestrial) frontends
-#
-CONFIG_DVB_DRXK=m
-CONFIG_DVB_TDA18271C2DD=m
-
-#
-# DVB-S (satellite) frontends
-#
-CONFIG_DVB_CX24110=m
-CONFIG_DVB_CX24123=m
-CONFIG_DVB_MT312=m
-CONFIG_DVB_ZL10036=m
-CONFIG_DVB_ZL10039=m
-CONFIG_DVB_S5H1420=m
-CONFIG_DVB_STV0288=m
-CONFIG_DVB_STB6000=m
-CONFIG_DVB_STV0299=m
-CONFIG_DVB_STV6110=m
-CONFIG_DVB_STV0900=m
-CONFIG_DVB_TDA8083=m
-CONFIG_DVB_TDA10086=m
-CONFIG_DVB_TDA8261=m
-CONFIG_DVB_VES1X93=m
-CONFIG_DVB_TUNER_ITD1000=m
-CONFIG_DVB_TUNER_CX24113=m
-CONFIG_DVB_TDA826X=m
-CONFIG_DVB_TUA6100=m
-CONFIG_DVB_CX24116=m
-CONFIG_DVB_SI21XX=m
-CONFIG_DVB_DS3000=m
-CONFIG_DVB_MB86A16=m
-CONFIG_DVB_TDA10071=m
-
-#
-# DVB-T (terrestrial) frontends
-#
-CONFIG_DVB_SP8870=m
-CONFIG_DVB_SP887X=m
-CONFIG_DVB_CX22700=m
-CONFIG_DVB_CX22702=m
-CONFIG_DVB_S5H1432=m
-CONFIG_DVB_DRXD=m
-CONFIG_DVB_L64781=m
-CONFIG_DVB_TDA1004X=m
-CONFIG_DVB_NXT6000=m
-CONFIG_DVB_MT352=m
-CONFIG_DVB_ZL10353=m
-CONFIG_DVB_DIB3000MB=m
-CONFIG_DVB_DIB3000MC=m
-CONFIG_DVB_DIB7000M=m
-CONFIG_DVB_DIB7000P=m
-CONFIG_DVB_DIB9000=m
-CONFIG_DVB_TDA10048=m
-CONFIG_DVB_AF9013=m
-CONFIG_DVB_EC100=m
-CONFIG_DVB_HD29L2=m
-CONFIG_DVB_STV0367=m
-CONFIG_DVB_CXD2820R=m
-CONFIG_DVB_RTL2830=m
-
-#
-# DVB-C (cable) frontends
-#
-CONFIG_DVB_VES1820=m
-CONFIG_DVB_TDA10021=m
-CONFIG_DVB_TDA10023=m
-CONFIG_DVB_STV0297=m
-
-#
-# ATSC (North American/Korean Terrestrial/Cable DTV) frontends
-#
-CONFIG_DVB_NXT200X=m
-CONFIG_DVB_OR51211=m
-CONFIG_DVB_OR51132=m
-CONFIG_DVB_BCM3510=m
-CONFIG_DVB_LGDT330X=m
-CONFIG_DVB_LGDT3305=m
-CONFIG_DVB_S5H1409=m
-CONFIG_DVB_AU8522=m
-CONFIG_DVB_S5H1411=m
-
-#
-# ISDB-T (terrestrial) frontends
-#
-CONFIG_DVB_S921=m
-CONFIG_DVB_DIB8000=m
-CONFIG_DVB_MB86A20S=m
-
-#
-# Digital terrestrial only tuners/PLL
-#
-CONFIG_DVB_PLL=m
-CONFIG_DVB_TUNER_DIB0070=m
-CONFIG_DVB_TUNER_DIB0090=m
-
-#
-# SEC control devices for DVB-S
-#
-CONFIG_DVB_LNBP21=m
-CONFIG_DVB_LNBP22=m
-CONFIG_DVB_ISL6405=m
-CONFIG_DVB_ISL6421=m
-CONFIG_DVB_ISL6423=m
-CONFIG_DVB_A8293=m
-CONFIG_DVB_LGS8GL5=m
-CONFIG_DVB_LGS8GXX=m
-CONFIG_DVB_ATBM8830=m
-CONFIG_DVB_TDA665x=m
-CONFIG_DVB_IX2505V=m
-CONFIG_DVB_IT913X_FE=m
-CONFIG_DVB_M88RS2000=m
-
-#
-# Tools to develop new frontends
-#
-# CONFIG_DVB_DUMMY_FE is not set
 
 #
 # Graphics support
@@ -2811,7 +2609,6 @@ CONFIG_MSM_KGSL_PAGE_TABLE_COUNT=8
 CONFIG_MSM_KGSL_MMU_PAGE_FAULT=y
 # CONFIG_MSM_KGSL_DISABLE_SHADOW_WRITES is not set
 # CONFIG_MSM_KGSL_KILL_HANG_PROCESS is not set
-CONFIG_MSM_KGSL_DEFAULT_GPU_HUNG_NO_PANIC=5
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
@@ -3021,6 +2818,7 @@ CONFIG_AUDIO_OCMEM=y
 CONFIG_DOLBY_DAP=y
 CONFIG_SND_SOC_MSM8974=y
 CONFIG_SND_SOC_APQ8074=y
+CONFIG_HD_AUDIO=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
 CONFIG_SND_SOC_WCD9320=y
@@ -3078,7 +2876,7 @@ CONFIG_HID_MICROSOFT=y
 # CONFIG_HID_ROCCAT is not set
 # CONFIG_HID_SAITEK is not set
 # CONFIG_HID_SAMSUNG is not set
-# CONFIG_HID_SONY is not set
+CONFIG_HID_SONY=y
 # CONFIG_HID_SPEEDLINK is not set
 # CONFIG_HID_SUNPLUS is not set
 # CONFIG_HID_GREENASIA is not set
@@ -3329,6 +3127,7 @@ CONFIG_LEDS_CLASS=y
 # CONFIG_LEDS_LP5523 is not set
 # CONFIG_LEDS_PCA955X is not set
 # CONFIG_LEDS_PCA9633 is not set
+# CONFIG_HTC_FLASHLIGHT_COMMON is not set
 CONFIG_LEDS_QPNP=y
 # CONFIG_LEDS_MSM_GPIO_FLASH is not set
 # CONFIG_LEDS_DAC124S085 is not set
@@ -3377,7 +3176,6 @@ CONFIG_RTC_INTF_ALARM=y
 CONFIG_RTC_INTF_ALARM_DEV=y
 CONFIG_HTC_OFFMODE_ALARM=y
 CONFIG_HTC_QUICKBOOT_OFFMODE_ALARM=y
-CONFIG_HTC_POWERSAVE_MODE_ALARM=y
 # CONFIG_RTC_INTF_DEV_UIE_EMUL is not set
 # CONFIG_RTC_DRV_TEST is not set
 
@@ -3467,9 +3265,10 @@ CONFIG_STAGING=y
 # CONFIG_TRANZPORT is not set
 # CONFIG_LINE6_USB is not set
 # CONFIG_VT6656 is not set
-# CONFIG_IIO is not set
 CONFIG_ZRAM=y
 # CONFIG_ZRAM_DEBUG is not set
+# CONFIG_ZRAM_LZO is not set
+CONFIG_ZRAM_LZ4=y
 CONFIG_ZSMALLOC=y
 # CONFIG_FB_SM7XX is not set
 # CONFIG_USB_ENESTORAGE is not set
@@ -3520,7 +3319,6 @@ CONFIG_QPNP_CLKDIV=y
 CONFIG_QPNP_REVID=y
 CONFIG_QPNP_COINCELL=y
 # CONFIG_IPA is not set
-CONFIG_MSM_AVTIMER=y
 # CONFIG_PFT is not set
 # CONFIG_SSM is not set
 CONFIG_CLKDEV_LOOKUP=y
@@ -3567,10 +3365,10 @@ CONFIG_MOBICORE_SUPPORT=m
 # CONFIG_MOBICORE_DEBUG is not set
 CONFIG_MOBICORE_API=m
 # CONFIG_CORESIGHT is not set
-# CONFIG_CORESIGHT_FUSE is not set
 CONFIG_BIF=y
 CONFIG_BIF_QPNP=y
 CONFIG_DIRTY_SYSTEM_DETECTOR=y
+CONFIG_HTC_PROCESS_DEBUG is not set
 CONFIG_HTC_DEBUG_SAVE_BOOT_MSG=y
 CONFIG_HTC_DEBUG_REPORT_MEMINFO=y
 # CONFIG_HTC_INIT_COREDUMP is not set
@@ -3727,6 +3525,7 @@ CONFIG_HTC_DEBUG_SSR=y
 CONFIG_HTC_DEBUG_KP=y
 CONFIG_HTC_DEBUG_CACHE=y
 CONFIG_HTC_DEBUG_VMALLOC_DUMP=y
+# CONFIG_HTC_DEBUG_DSP is not set
 CONFIG_HTC_DEBUG_RAMCONSOLE=y
 # CONFIG_HTC_DEBUG_BINDER_WRITE is not set
 # CONFIG_HTC_DEBUG_SEND_SIGNAL is not set
@@ -3746,8 +3545,7 @@ CONFIG_HTC_DEFAULT_ENABLED_FEATURES=y
 CONFIG_ENLARGE_RADIO_BUFFER=y
 CONFIG_HTC_RPM_CMD=y
 # CONFIG_HTC_POWER_HACK is not set
-CONFIG_HTC_DEBUG_RIL_PCN0005_HTC_DUMP_SMSM_LOG=y
-CONFIG_HTC_DEBUG_RIL_PCN0006_HTC_DUMP_BAM_DMUX_LOG=y
+# CONFIG_HTC_DEBUG_PAGE_USER_TRACE is not set
 
 #
 # Kernel hacking
@@ -3850,7 +3648,6 @@ CONFIG_CPU_FREQ_SWITCH_PROFILER=y
 CONFIG_DYNAMIC_DEBUG=y
 # CONFIG_DMA_API_DEBUG is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
-CONFIG_PANIC_ON_DATA_CORRUPTION=y
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_KGDB is not set
@@ -3992,6 +3789,8 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 CONFIG_CRYPTO_DEFLATE=y
 # CONFIG_CRYPTO_ZLIB is not set
 # CONFIG_CRYPTO_LZO is not set
+# CONFIG_CRYPTO_LZ4 is not set
+# CONFIG_CRYPTO_LZ4HC is not set
 
 #
 # Random Number Generation
@@ -4032,6 +3831,8 @@ CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
 CONFIG_DECOMPRESS_GZIP=y
@@ -4071,4 +3872,3 @@ CONFIG_IIO_BUFFER=y
 CONFIG_IIO_TRIGGER=y
 CONFIG_IIO_SW_RING=y
 CONFIG_IIO_SENSORS_YAS53X=y
-
