Bring in dt files from b2uhl-3.4.0-gd2e9ae5 for brighter LED notification lights

--- a/arch/arm/boot/dts/msm8974-touch-b2-config.dtsi
+++ b/arch/arm/boot/dts/msm8974-touch-b2-config.dtsi
@@ -24,6 +24,202 @@
 			tw_pin_mask              = <0x05>;
 			report_type              = <1>;
 
+			config_3528_mfg_0key_yfo_7 {
+				default_cfg   = <1>;
+				pr_number     = <1661078>;
+				mfgconfig;
+				sensor_id     = <0x0>;
+				syn,pl-coords = <0 1620 0 2880>;
+				cover_setting = <0xFF 0x00 0x0D 0x12 0x00 0x00 0x00 0x0C>;
+				config = [
+					42 32 00 0B 00 7F 03 14
+					05 51 0E 54 06 40 0B 07
+					43 A6 41 00 00 00 00 0F
+					1B 01 1E 05 58 08 7D 01
+					2D 2F FE 35 FC F7 C8 EC
+					E4 83 80 C4 C4 05 03 4C
+					00 01 00 2A 2D 9C 0F 0A
+					96 00 01 01 07 04 04 0A
+					32 08 6E 26 26 80 80 00
+					00 F0 C0 53 5B 80 6C 6C
+					01 40 2D 2D 50 00 00 00
+					00 4C 04 6C 07 3C 32 00
+					00 00 00 4C 04 6C 07 1E
+					05 00 00 00 00 01 05 0A
+					78 00 00 06 39 01 00 18
+					00 06 39 01 00 18 33 33
+					CC 1C 02 19 10 0A 30 06
+					30 06 03 88 1F 40 00 40
+					00 32 23 4B 50 37 3C 0C
+					0C 00 00 14 14 10 03 10
+					03 09 96 00 00 14 03 0C
+					0F 0A 00 4B 00 FF FF FF
+					FF FF FF FF FF FF FF FF
+					FF FF FF FF FF FF FF FF
+					FF FF FF FF FF FF FF FF
+					FF FF FF FF FF FF 00 FA
+					00 80 04 1B 00 00 FF E8
+					03 FF FF BF 96 E8 03 00
+					C0 80 00 10 0A 18 00 79
+					05 08 00 00 5A 00 01 00
+					03 03 07 07 03 8C 00 04
+					04 01 04 03 31 00 13 00
+					00 00 03 00 01 24 83 2F
+					00 12 00 02 00 03 00 01
+					26 83 2D 00 12 00 04 00
+					03 00 01 27 83 2C 00 11
+					00 06 00 03 00 01 28 83
+					2A 00 11 00 08 00 07 00
+					02 24 03 28 00 10 00 0B
+					00 07 00 02 26 83 27 00
+					0F 00 0E 00 07 00 02 27
+					82 25 00 0F 00 11 00 04
+					00 01 24 03 03 03 03 03
+					03 03 03 03 03 03 03 04
+					04 03 00 00 00 00 00 00
+					00 03 03 03 03 03 03 03
+					03 03 03 03 03 03 03 03
+					03 03 03 03 03 03 03 0E
+					0D 0D 0D 0D 0D 0D 0D 0D
+					0D 0D 0D 0D 0D 0D 0E 0D
+					0D 0D 0D 0D 0D 0D 0D 0D
+					0D 0D 0D 0D 0D 0D 0B 03
+					03 02 03 07 03 03 02 03
+					07 29 00 06 00 A6 00 14
+					64 00 00 00 03 03 00 00
+					03 03 03 1B 28 05 00 00
+					25 17 00 05 02 16 81 01
+					08 1E FF A0 00 A0 00 48
+					3C 1E 03 08 08 14 28 04
+					00 00 00 00 00 00 00 00
+					00 00 00 01 01 01 57 00
+					01 80 07 01 03 01 01 01
+					01 01 03 07 00 07 05 0D
+					0D 00 00 07 04 04 28 00
+					05 03 00 31 22 00 05 00
+					00 00 00 00 00 00 00 00
+					01 00 00 00 FF FF FF FF
+					FF FF FF FF 51 51 51 51
+					CD 0D 04 83 10 10 10 10
+					05 20 1F 1E 1D 1C 1B 1A
+					18 17 16 15 14 13 12 11
+					FF FF FF FF FF FF FF 00
+					01 02 03 04 05 06 07 08
+					09 0A 0B 0C 0D 33 32 31
+					30 2F 2E 2D 2C 2B 2A 29
+					28 27 FF FF FF FF FF 00
+					10 00 10 00 10 00 10 80
+					80 80 80 80 80 80 80 80
+					80 80 80 80 80 80 80 80
+					80 80 80 80 80 9D 9C 9B
+					9A 98 97 96 94 93 92 91
+					8F 8E 8E 8E 8D 8C 8A 89
+					80 80 80 80 80 80 80 80
+					80 80 80 80 80 85 13 85
+					13 00 10 00 10 00 00 21
+					22 FF FF 0E 26 35 FF 01
+					02 0A 32 01 68 36
+				];
+			};
+
+			config_3528_mfg_0key_yfo_6 {
+				default_cfg   = <1>;
+				pr_number     = <1661078>;
+				mfgconfig;
+				sensor_id     = <0x1>;
+				syn,pl-coords = <0 1620 0 2880>;
+				cover_setting = <0xFF 0x00 0x0D 0x12 0x00 0x00 0x00 0x0C>;
+				config = [
+					42 32 00 0B 00 7F 03 14
+					05 51 0E 54 06 40 0B 07
+					43 A6 41 00 00 00 00 0F
+					1B 01 1E 05 58 08 7D 01
+					2D 2F FE 35 FC F7 C8 EC
+					E4 83 80 C4 C4 05 03 4C
+					00 01 00 2A 2D 9C 0F 0A
+					96 00 01 01 07 04 04 0A
+					32 08 6E 26 26 80 80 00
+					00 F0 C0 53 5B 80 6C 6C
+					01 40 2D 2D 50 00 00 00
+					00 4C 04 6C 07 3C 32 00
+					00 00 00 4C 04 6C 07 1E
+					05 00 00 00 00 01 05 0A
+					78 00 00 06 39 01 00 18
+					00 06 39 01 00 18 33 33
+					CC 1C 02 19 10 0A 30 06
+					30 06 03 88 1F 40 00 40
+					00 32 23 4B 50 37 3C 0C
+					0C 00 00 14 14 10 03 10
+					03 09 96 00 00 14 03 0C
+					0F 0A 00 4B 00 FF FF FF
+					FF FF FF FF FF FF FF FF
+					FF FF FF FF FF FF FF FF
+					FF FF FF FF FF FF FF FF
+					FF FF FF FF FF FF 00 FA
+					00 80 04 1B 00 00 FF E8
+					03 FF FF BF 96 E8 03 00
+					C0 80 00 10 0A 18 00 79
+					05 08 00 00 5A 00 01 00
+					03 03 07 07 03 8C 00 04
+					04 01 04 03 31 00 13 00
+					00 00 03 00 01 24 83 2F
+					00 12 00 02 00 03 00 01
+					26 83 2D 00 12 00 04 00
+					03 00 01 27 83 2C 00 11
+					00 06 00 03 00 01 28 83
+					2A 00 11 00 08 00 07 00
+					02 24 03 28 00 10 00 0B
+					00 07 00 02 26 83 27 00
+					0F 00 0E 00 07 00 02 27
+					82 25 00 0F 00 11 00 04
+					00 01 24 03 03 03 03 03
+					03 03 03 03 03 03 03 04
+					04 03 00 00 00 00 00 00
+					00 03 03 03 03 03 03 03
+					03 03 03 03 03 03 03 03
+					03 03 03 03 03 03 03 0E
+					0D 0D 0D 0D 0D 0D 0D 0D
+					0D 0D 0D 0D 0D 0D 0E 0D
+					0D 0D 0D 0D 0D 0D 0D 0D
+					0D 0D 0D 0D 0D 0D 0B 03
+					03 02 03 07 03 03 02 03
+					07 29 00 06 00 A6 00 14
+					64 00 00 00 03 03 00 00
+					03 03 03 1B 28 05 00 00
+					25 17 00 05 02 16 81 01
+					08 1E FF A0 00 A0 00 48
+					3C 1E 03 08 08 14 28 04
+					00 00 00 00 00 00 00 00
+					00 00 00 01 01 01 57 00
+					01 80 07 01 03 01 01 01
+					01 01 03 07 00 07 05 0D
+					0D 00 00 07 04 04 28 00
+					05 03 00 31 22 00 05 00
+					00 00 00 00 00 00 00 00
+					01 00 00 00 FF FF FF FF
+					FF FF FF FF 51 51 51 51
+					CD 0D 04 83 10 10 10 10
+					05 20 1F 1E 1D 1C 1B 1A
+					18 17 16 15 14 13 12 11
+					FF FF FF FF FF FF FF 00
+					01 02 03 04 05 06 07 08
+					09 0A 0B 0C 0D 33 32 31
+					30 2F 2E 2D 2C 2B 2A 29
+					28 27 FF FF FF FF FF 00
+					10 00 10 00 10 00 10 80
+					80 80 80 80 80 80 80 80
+					80 80 80 80 80 80 80 80
+					80 80 80 80 80 9D 9C 9B
+					9A 98 97 96 94 93 92 91
+					8F 8E 8E 8E 8D 8C 8A 89
+					80 80 80 80 80 80 80 80
+					80 80 80 80 80 85 13 85
+					13 00 10 00 10 00 00 21
+					22 FF FF 0E 26 35 FF 01
+					02 0A 32 01 68 36
+				];
+			};
+
 			config_3528_0key_yfo_7 {
 				default_cfg   = <1>;
 				pr_number     = <1661078>;
