--- a/arch/arm/boot/dts/msm8974-camera-sensor-b2-ver-b.dtsi
+++ b/arch/arm/boot/dts/msm8974-camera-sensor-b2-ver-b.dtsi
@@ -72,6 +72,55 @@
 		status = "ok";
 	};
 
+
+	qcom,camera@6e {
+		compatible = "htc,ov13850_1140m";
+		reg = <0x6e 0x0>;
+		qcom,slave-id = <0x20 0x300a 0xd850>;
+		qcom,csiphy-sd-index = <0>;
+		qcom,csid-sd-index = <0>;
+		qcom,actuator-src = <&actuator0>;
+		qcom,led-flash-src = <&led_flash0>;
+		qcom,mount-angle = <90>;
+		qcom,sensor-name = "ov13850_1140m";
+		qcom,htc-image = <0>;
+
+		qcom,vdd-cx-supply = <&pm8841_s2>;
+		qcom,vdd-cx-name = "qcom,vdd-cx";
+		cam_vdig-supply = <&ncp6924_dcdc1>;
+		cam_vana-supply = <&ncp6924_ldo3>;
+		cam_vio-supply = <&ncp6924_ldo1>;
+		cam_vaf-supply = <&ncp6924_ldo4>;
+		qcom,cam-vreg-name = "cam_vdig", "cam_vio", "cam_vana", "cam_vaf";
+		qcom,cam-vreg-type = <0 0 0 0>;
+		qcom,cam-vreg-min-voltage = <1200000 1800000 2800000 2850000>;
+		qcom,cam-vreg-max-voltage = <1200000 1800000 2800000 2850000>;
+		qcom,cam-vreg-op-mode = <0 0 0 0>;
+		qcom,cam-vreg-gpios-index = <99 99 99 99>;
+
+		qcom,gpio-no-mux = <0>;
+		gpios = <&msmgpio 15 0>,
+			<&pm8941_gpios 12 0>,
+			<&pm8941_gpios 22 0>;
+
+		qcom,gpio-reset = <1>;
+		qcom,gpio-standby = <2>;   //Used for NCP6924_CAM_EN
+		//qcom,gpio-vcm-pwd = <2>;
+		qcom,gpio-req-tbl-num = <0 1 2>;
+		qcom,gpio-req-tbl-flags = <0 0 0>;
+		qcom,gpio-req-tbl-label = "CAMIF_MCLK",
+					  "CAM_PWDN",
+					  "NCP6924_CAM_EN";
+
+		qcom,csi-lane-assign = <0x4320>;
+		qcom,csi-lane-mask = <0x1F>;
+		qcom,sensor-position = <0>;
+		qcom,sensor-mode = <1>;
+		qcom,cci-master = <0>;
+
+		status = "ok";
+	};
+
 	qcom,camera@01 {
 		compatible = "subcam,ov2722";
 		reg = <0x01 0x0>;
